--- a/Images/temporal-dev/config_template.yaml
+++ b/Images/temporal-dev/config_template.yaml
@@ -1,68 +1,162 @@
 log:
   stdout: true
-  level: "${LOG_LEVEL}"
+  level: {{ default .Env.LOG_LEVEL "info" }}
 
 persistence:
-  defaultStore: cass-default
-  visibilityStore: cass-visibility
-  numHistoryShards: ${NUM_HISTORY_SHARDS}
+  numHistoryShards: {{ default .Env.NUM_HISTORY_SHARDS "4" }}
+  defaultStore: default
+  visibilityStore: visibility
+  {{- $es := default .Env.ENABLE_ES "false" | lower -}}
+  {{- if eq $es "true" }}
+  advancedVisibilityStore: es-visibility
+  {{- end }}
   datastores:
-    cass-default:
+    {{- $db := default .Env.DB "cassandra" | lower -}}
+    {{- if eq $db "cassandra" }}
+    default:
       cassandra:
-        hosts: "${CASSANDRA_SEEDS}"
-        keyspace: "${KEYSPACE}"
-        consistency: "${CASSANDRA_CONSISTENCY}"
-    cass-visibility:
+        hosts: {{ default .Env.CASSANDRA_SEEDS "" }}
+        keyspace: {{ default .Env.KEYSPACE "temporal" }}
+    visibility:
       cassandra:
-        hosts: "${CASSANDRA_SEEDS}"
-        keyspace: "${VISIBILITY_KEYSPACE}"
-        consistency: "${CASSANDRA_CONSISTENCY}"
+        hosts: {{ default .Env.CASSANDRA_SEEDS "" }}
+        keyspace: {{ default .Env.VISIBILITY_KEYSPACE "temporal_visibility" }}
+    {{- else if eq $db "mysql" }}
+    default:
+      sql:
+        pluginName: "mysql"
+        databaseName: {{ default .Env.DBNAME "temporal" }}
+        connectAddr: "{{ default .Env.MYSQL_SEEDS "" }}:{{ default .Env.DB_PORT "3306" }}"
+        connectProtocol: "tcp"
+        user: {{ default .Env.MYSQL_USER "" }}
+        password: {{ default .Env.MYSQL_PWD "" }}
+        {{- if .Env.MYSQL_TX_ISOLATION_COMPAT }}
+        connectAttributes:
+            tx_isolation: 'READ-COMMITTED'
+        {{- end }}
+    visibility:
+      sql:
+        pluginName: "mysql"
+        databaseName: {{ default .Env.VISIBILITY_DBNAME "temporal_visibility" }}
+        connectAddr: "{{ default .Env.MYSQL_SEEDS "" }}:{{ default .Env.DB_PORT "3306" }}"
+        connectProtocol: "tcp"
+        user: {{ default .Env.MYSQL_USER "" }}
+        password: {{ default .Env.MYSQL_PWD "" }}
+        {{- if .Env.MYSQL_TX_ISOLATION_COMPAT }}
+        connectAttributes:
+            tx_isolation: 'READ-COMMITTED'
+        {{- end }}
+    {{- else if eq $db "postgres" }}
+    default:
+      sql:
+        pluginName: "postgres"
+        databaseName: {{ default .Env.DBNAME "temporal" }}
+        connectAddr: "{{ default .Env.POSTGRES_SEEDS "" }}:{{ default .Env.DB_PORT "5432" }}"
+        connectProtocol: "tcp"
+        user: {{ default .Env.POSTGRES_USER "" }}
+        password: {{ default .Env.POSTGRES_PWD "" }}
+        maxConns: 20
+        maxIdleConns: 20
+        maxConnLifetime: "1h"
+    visibility:
+      sql:
+        pluginName: "postgres"
+        databaseName: {{ default .Env.VISIBILITY_DBNAME "temporal_visibility" }}
+        connectAddr: "{{ default .Env.POSTGRES_SEEDS "" }}:{{ default .Env.DB_PORT "5432" }}"
+        connectProtocol: "tcp"
+        user: {{ default .Env.POSTGRES_USER "" }}
+        password: {{ default .Env.POSTGRES_PWD "" }}
+        maxConns: 20
+        maxIdleConns: 20
+        maxConnLifetime: "1h"
+      {{- end }}
+      {{- if eq $es "true" }}
+      es-visibility:
+        elasticsearch:
+          url:
+            scheme: "http"
+            host: "{{ default .Env.ES_SEEDS "" }}:9200"
+          indices:
+            visibility: temporal-visibility-dev
+      {{- end }}
 
-ringpop:
-  name: cadence
-  bootstrapMode: hosts
-  bootstrapHosts: ${RINGPOP_SEEDS_JSON_ARRAY}
-  maxJoinDuration: 30s
+server:
+  ringpop:
+    name: temporal
+    maxJoinDuration: 30s
+    broadcastAddress: {{ default .Env.TEMPORAL_BROADCAST_ADDRESS "" }}
 
 services:
   frontend:
-    rpc:
-      port: 7933
-      bindOnIP: ${BIND_ON_IP}
+      rpc:
+        grpcPort: 7233
+        membershipPort: 6933
+        bindOnIP: {{ default .Env.BIND_ON_IP "127.0.0.1" }}
+    {{- if .Env.STATSD_ENDPOINT }}
     metrics:
       statsd:
-        hostPort: "${STATSD_ENDPOINT}"
-        prefix: "cadence-frontend"
+        hostPort: {{ .Env.STATSD_ENDPOINT }}
+        prefix: "frontend"
+    {{- else if .Env.PROMETHEUS_ENDPOINT }}
+    metrics:
+      prometheus:
+        timerType: {{ default .Env.PROMETHEUS_TIMER_TYPE "histogram" }}
+        listenAddress: {{ .Env.PROMETHEUS_ENDPOINT }}
+    {{- end }}
 
   matching:
     rpc:
-      port: 7935
-      bindOnIP: ${BIND_ON_IP}
+      grpcPort: 7235
+      membershipPort: 6935
+      bindOnIP: {{ default .Env.BIND_ON_IP "127.0.0.1" }}
+    {{- if .Env.STATSD_ENDPOINT }}
     metrics:
       statsd:
-        hostPort: "${STATSD_ENDPOINT}"
-        prefix: "cadence-matching"
+        hostPort: {{ .Env.STATSD_ENDPOINT }}
+        prefix: "matching"
+    {{- else if .Env.PROMETHEUS_ENDPOINT }}
+    metrics:
+      prometheus:
+        timerType: {{ default .Env.PROMETHEUS_TIMER_TYPE "histogram" }}
+        listenAddress: {{ .Env.PROMETHEUS_ENDPOINT }}
+    {{- end }}
 
   history:
     rpc:
-      port: 7934
-      bindOnIP: ${BIND_ON_IP}
+      grpcPort: 7234
+      membershipPort: 6934
+      bindOnIP: {{ default .Env.BIND_ON_IP "127.0.0.1" }}
+    {{- if .Env.STATSD_ENDPOINT }}
     metrics:
       statsd:
-        hostPort: "${STATSD_ENDPOINT}"
-        prefix: "cadence-history"
+        hostPort: {{ .Env.STATSD_ENDPOINT }}
+        prefix: "history"
+    {{- else if .Env.PROMETHEUS_ENDPOINT }}
+    metrics:
+      prometheus:
+        timerType: {{ default .Env.PROMETHEUS_TIMER_TYPE "histogram" }}
+        listenAddress: {{ .Env.PROMETHEUS_ENDPOINT }}
+    {{- end }}
 
   worker:
     rpc:
-      port: 7939
-      bindOnIP: ${BIND_ON_IP}
+      grpcPort: 7239
+      membershipPort: 6939
+      bindOnIP: {{ default .Env.BIND_ON_IP "127.0.0.1" }}
+    {{- if .Env.STATSD_ENDPOINT }}
     metrics:
       statsd:
-        hostPort: "${STATSD_ENDPOINT}"
-        prefix: "cadence-worker"
+        hostPort: {{ .Env.STATSD_ENDPOINT }}
+        prefix: "worker"
+    {{- else if .Env.PROMETHEUS_ENDPOINT }}
+    metrics:
+      prometheus:
+        timerType: {{ default .Env.PROMETHEUS_TIMER_TYPE "histogram" }}
+        listenAddress: {{ .Env.PROMETHEUS_ENDPOINT }}
+    {{- end }}
 
 clusterMetadata:
-  enableGlobalDomain: false
+  enableGlobalNamespace: false
   failoverVersionIncrement: 10
   masterClusterName: "active"
   currentClusterName: "active"
@@ -70,22 +164,58 @@ clusterMetadata:
     active:
       enabled: true
       initialFailoverVersion: 0
-      rpcName: "cadence-frontend"
-      rpcAddress: "${HOST_IP}:7933"
+      rpcName: "frontend"
+      rpcAddress: "127.0.0.1:7233"
 
 dcRedirectionPolicy:
   policy: "noop"
   toDC: ""
 
 archival:
-  status: "enabled"
-  defaultBucket: "cadence-development"
-  filestore:
-    storeDirectory: "/tmp/development/blobstore/"
-    defaultBucket: "cadence-development"
-    customBuckets:
-      - "custom-bucket-1"
-      - "custom-bucket-2"
+  history:
+    status: "enabled"
+    enableRead: true
+    provider:
+      filestore:
+        fileMode: "0666"
+        dirMode: "0766"
+  visibility:
+    status: "enabled"
+    enableRead: true
+    provider:
+      filestore:
+        fileMode: "0666"
+        dirMode: "0766"
+
+namespaceDefaults:
+  archival:
+    history:
+      status: "enabled"
+      URI: "file:///tmp/temporal_archival/development"
+    visibility:
+      status: "enabled"
+      URI: "file:///tmp/cadence_vis_archival/development"
+
+kafka:
+  tls:
+    enabled: false
+  clusters:
+    test:
+      brokers:
+        - {{ default .Env.KAFKA_SEEDS "" }}:9092
+  topics:
+    temporal-visibility-dev:
+      cluster: test
+    temporal-visibility-dev-dlq:
+      cluster: test
+  applications:
+    visibility:
+      topic: temporal-visibility-dev
+      dlq-topic: temporal-visibility-dev-dlq
 
 publicClient:
-  hostPort: "${BIND_ON_IP}:7933"
+  hostPort: {{ default .Env.BIND_ON_IP "127.0.0.1" }}:7233
+
+dynamicConfigClient:
+  filepath: {{ default .Env.DYNAMIC_CONFIG_FILE_PATH "/etc/temporal/config/dynamicconfig" }}
+  pollInterval: "60s"
