--- a/Charts/istio-prometheus/values.yaml
+++ b/Charts/istio-prometheus/values.yaml
@@ -9,6 +9,9 @@ prometheus:
   # Controls the default scrape interval used in the ServiceMonitors
   scrapeInterval: 15s
 
+  security:
+    enabled: true
+
   # Enabling this option will generate a Prometheus resource, causing the operator
   # to create a prometheus deployment according to the generated spec. It will also
   # create a service definition, destination rules, cluster roles and bindings, and
