--- a/Charts/fluent-bit/templates/daemonset.yaml
+++ b/Charts/fluent-bit/templates/daemonset.yaml
@@ -34,6 +34,7 @@ spec:
 {{- end }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
+        fluentbit.io/exclude: 'true'
 {{- if .Values.podAnnotations }}
 {{ toYaml .Values.podAnnotations | indent 8 }}
 {{- end }}
@@ -53,7 +54,7 @@ spec:
       dnsPolicy: {{ .Values.dnsPolicy }}
       serviceAccountName: {{ template "fluent-bit.serviceAccountName" . }}
       containers:
-      - name: fluent-bit
+      - name: neon-log-host
         image: "{{ .Values.image.fluent_bit.repository }}:{{ .Values.image.fluent_bit.tag }}"
         imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         env:
@@ -61,6 +62,9 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 10 }}
 {{- if or .Values.metrics.enabled .Values.extraPorts }}
+        env:
+          - name: LOG_LEVEL
+            value: {{ .Values.logLevel | quote }}
         ports:
 {{- if .Values.metrics.enabled }}
         - name: metrics
@@ -86,35 +90,6 @@ spec:
           mountPath: /etc/machine-id
           readOnly: true
       {{- end }}
-{{- if .Values.fullConfigMap }}
-        - name: config
-          mountPath: /fluent-bit/etc
-{{- else }}
-        - name: config
-          mountPath: /fluent-bit/etc/fluent-bit.conf
-          subPath: fluent-bit.conf
-        - name: config
-          mountPath: /fluent-bit/etc/fluent-bit-service.conf
-          subPath: fluent-bit-service.conf
-        - name: config
-          mountPath: /fluent-bit/etc/fluent-bit-input.conf
-          subPath: fluent-bit-input.conf
-        - name: config
-          mountPath: /fluent-bit/etc/fluent-bit-filter.conf
-          subPath: fluent-bit-filter.conf
-        - name: config
-          mountPath: /fluent-bit/etc/fluent-bit-output.conf
-          subPath: fluent-bit-output.conf
-        - name: config
-          mountPath: /fluent-bit/etc/functions.lua
-          subPath: functions.lua
-
-{{- if .Values.parsers.enabled }}
-        - name: config
-          mountPath: /fluent-bit/etc/parsers_custom.conf
-          subPath: parsers.conf
-{{- end }}
-{{- end }}
 {{- if .Values.backend.es.tls_ca }}
         - name: es-tls-secret
           mountPath: /secure/es-tls-ca.crt
