--- a/Charts/fluent-bit/values.yaml
+++ b/Charts/fluent-bit/values.yaml
@@ -4,8 +4,8 @@ on_minikube: false
 
 image:
   fluent_bit:
-    repository: fluent/fluent-bit
-    tag: 1.3.2
+    repository: nkubedev/neon-log-host
+    tag: latest
   pullPolicy: Always
 
 testFramework:
@@ -15,9 +15,11 @@ testFramework:
 nameOverride: ""
 fullnameOverride: ""
 
+logLevel: info
+
 # When enabled, exposes json and prometheus metrics on {{ .Release.Name }}-metrics service
 metrics:
-  enabled: false
+  enabled: true
   service:
     # labels:
     #   key: value
@@ -29,7 +31,7 @@ metrics:
     port: 2020
     type: ClusterIP
   serviceMonitor:
-    enabled: false
+    enabled: true
     additionalLabels: {}
     # namespace: monitoring
     # interval: 30s
@@ -173,12 +175,19 @@ extraPorts: []
 ## (eg. CA certificates)
 ## Ref: https://kubernetes.io/docs/concepts/storage/volumes/
 ##
-extraVolumes: []
+extraVolumes:
+  - name: cluster-environment
+    hostPath:
+      path: /etc/environment
+      type: File
 
 ## Extra volume mounts for the fluent-bit pod.
 ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-volume-storage/
 ##
-extraVolumeMounts: []
+extraVolumeMounts:
+  - name: cluster-environment
+    readOnly: true
+    mountPath: /etc/environment
 
 resources: {}
   # limits:
@@ -257,7 +266,7 @@ rbac:
   # Specifies whether RBAC resources should be created
   create: true
   # Specifies whether a PodSecurityPolicy should be created
-  pspEnabled: false
+  pspEnabled: true
 
 taildb:
   directory: /var/lib/fluent-bit
