--- a/Charts/etcd-cluster/Chart.yaml
+++ b/Charts/etcd-cluster/Chart.yaml
@@ -1,5 +1,13 @@
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
-name: etcd-cluster
-version: 0.1.0
+name: etcd
+home: https://github.com/coreos/etcd
+version: 0.7.4
+appVersion: 3.2.26
+description: Distributed reliable key-value store for the most critical data of a
+  distributed system.
+icon: https://raw.githubusercontent.com/coreos/etcd/master/logos/etcd-horizontal-color.png
+sources:
+- https://github.com/coreos/etcd
+maintainers:
+- name: lachie83
+  email: lachlan@deis.com
