--- a/Charts/etcd-cluster/values.yaml
+++ b/Charts/etcd-cluster/values.yaml
@@ -1,11 +1,73 @@
-# Default values for etcd-cluster.
+# Default values for etcd.
 # This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Declare name/value pairs to be passed into your templates.
+# name: value
 
-size: 3
+peerPort: 2380
+clientPort: 2379
+component: "etcd"
+replicas: 3
+image:
+  repository: "k8s.gcr.io/etcd-amd64"
+  tag: "3.2.26"
+  pullPolicy: "IfNotPresent"
+resources: {}
+# We usually recommend not to specify default resources and to leave this as a conscious
+# choice for the user. This also increases chances charts run on environments with little
+# resources, such as Minikube. If you do want to specify resources, uncomment the following
+# lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+# limits:
+#  cpu: 100m
+#  memory: 128Mi
+# requests:
+#  cpu: 100m
+#  memory: 128Mi
 
-tolerations: []
+# Authentication parameters
+##
+auth:
+  client:
+    ## Switch to encrypt client communication using TLS certificates
+    secureTransport: false
+    ## Switch to enable host authentication using TLS certificates. Requires existing secret.
+    enableAuthentication: false
+    ## Name of the existing secret containing cert files for peer communication.
+    # existingSecret:
 
-resources:
-  requests:
-    storage: 64Gi
+  peer:
+    ## Switch to encrypt peer communication using TLS certificates
+    secureTransport: false
+    ## Switch to automatically create the TLS certificates
+    useAutoTLS: false
+    ## Switch to enable host authentication using TLS certificates. Requires existing secret.
+    enableAuthentication: false
+
+persistence:
+  enabled: true
+  annotations: {}
+
+volumeClaimTemplate:
+  accessModes: [ "ReadWriteOnce" ]
+  storageClassName: "local-storage"
+  selector:
+    matchLabels:
+      etcd: monitoring
+  resources:
+    requests:
+      storage: 10Gi
+
+## This is only available when persistentVolume is false:
+## If persistentVolume is not enabled, one can choose to use memory mode for ETCD by setting memoryMode to "true".
+## The system will create a volume with "medium: Memory"
+memoryMode: false
+
+## Node labels and tolerations for pod assignment
+## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
+## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
+nodeSelector: {}
+tolerations:
+  - effect: NoSchedule
+    key: neonkube.io/m3
+    operator: Exists
+affinity: {}
+extraEnv: []
