--- a/Desktop/WinDesktop/WinDesktop.csproj
+++ b/Desktop/WinDesktop/WinDesktop.csproj
@@ -34,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'CodeDoc|AnyCPU'">
     <OutputPath>bin\CodeDoc\</OutputPath>
